_sass/logo.scss
.logo {
  width: 100%;
}

.logo__img {
  width: 100%;
  height: auto;
}

.logo__name {
  position: absolute;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px);
  height: 1px;
  width: 1px;
}

